# nsudoku-solver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
libnsudoku-solver/: Cargo.toml
libnsudoku-solver/benches/: sudoku_solver.rs
libnsudoku-solver/src/: lib.rs  parse.rs  solver.rs
nsudoku-solver-cli/: Cargo.toml
