[package]
name = "libnsudoku-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"], optional = true }
ndarray = "0.15.6"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
# default = ["serde"]
serde = ["dep:serde", "ndarray/serde"]
