[package]
name = "libnsudoku-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
serde = { version = "1.0.158", features = ["derive"], optional = true }
thiserror = "1.0.40"
winnow = "0.4.1"

[dev-dependencies]
criterion = "0.4.0"
pretty_assertions = "1.3.0"

[[bench]]
name = "sudoku_solver"
harness = false

[features]
# default = ["serde"]
serde = ["dep:serde", "ndarray/serde"]
